# aws-sdk-cpp-sqs-extended-lib

./: .gitignore  CMakeLists.txt  README.md
aws-cpp-sdk-sqs-extended-lib/: CMakeLists.txt
aws-cpp-sdk-sqs-extended-lib-integration-tests/: CMakeLists.txt  RunTests.cpp  SQSExtendedLibIntegrationTest.cpp
aws-cpp-sdk-sqs-extended-lib/include/aws/sqs/extendedlib/: SQSExtendedClient.h  SQSExtendedClientConfiguration.h  SQSLargeMessageS3Pointer.h
aws-cpp-sdk-sqs-extended-lib/source/: SQSExtendedClient.cpp  SQSExtendedClientConfiguration.cpp  SQSLargeMessageS3Pointer.cpp
code-generation/generator/: pom.xml
testing-resources/: CMakeLists.txt
